--- a/Semana2/Tarea/Tarea.ipynb
+++ b/Semana2/Tarea/Tarea.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +896,7 @@
        "[1884 rows x 6 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +938,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1121,7 @@
        " 'Cañada Honda, Ags.': -102.197222}"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1152,7 +1152,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1215,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1299,7 +1299,7 @@
        "Cañada Honda, Ags.          -102.197222  22.007222"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14183,6 +14183,102 @@
    "outputs": [],
    "source": [
     "df.to_csv('Population.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Longitud</th>\n",
+       "      <th>Latitud</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>-102.472611</td>\n",
+       "      <td>21.987500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.224482</td>\n",
+       "      <td>0.130984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-102.712222</td>\n",
+       "      <td>21.849167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>-102.676944</td>\n",
+       "      <td>21.895000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>-102.466944</td>\n",
+       "      <td>21.997500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>-102.309722</td>\n",
+       "      <td>22.007222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>-102.197222</td>\n",
+       "      <td>22.188611</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Longitud    Latitud\n",
+       "count    5.000000   5.000000\n",
+       "mean  -102.472611  21.987500\n",
+       "std      0.224482   0.130984\n",
+       "min   -102.712222  21.849167\n",
+       "25%   -102.676944  21.895000\n",
+       "50%   -102.466944  21.997500\n",
+       "75%   -102.309722  22.007222\n",
+       "max   -102.197222  22.188611"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estados.describe()"
    ]
   },
   {
