Se agregó parte del proyecto.

--- a/Proyectos/Proyecto_1/Preguntas_2.ipynb
+++ b/Proyectos/Proyecto_1/Preguntas_2.ipynb
@@ -1996,6 +1996,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{lllrlr}\n",
+      "\\toprule\n",
+      "{} &  MES &                                     EDO 2018 &  MÁXIMO 2018 &                                     EDO 2019 &  MÁXIMO 2019 \\\\\n",
+      "\\midrule\n",
+      "0 &  ENE &   Index(['TAB'], dtype='object', name='EDO') &   304.619231 &   Index(['TAB'], dtype='object', name='EDO') &   132.253182 \\\\\n",
+      "1 &  FEB &   Index(['SIN'], dtype='object', name='EDO') &    39.403922 &   Index(['TAB'], dtype='object', name='EDO') &    62.441818 \\\\\n",
+      "2 &  MAR &   Index(['SON'], dtype='object', name='EDO') &    51.395000 &    Index(['NL'], dtype='object', name='EDO') &    54.804000 \\\\\n",
+      "3 &  ABR &   Index(['TAB'], dtype='object', name='EDO') &   108.221739 &  Index(['TLAX'], dtype='object', name='EDO') &    30.590000 \\\\\n",
+      "4 &  MAY &  Index(['CHIS'], dtype='object', name='EDO') &   119.727103 &  Index(['CHIS'], dtype='object', name='EDO') &   203.600845 \\\\\n",
+      "5 &  JUN &   Index(['NAY'], dtype='object', name='EDO') &   300.737143 &  Index(['CHIS'], dtype='object', name='EDO') &   272.508451 \\\\\n",
+      "6 &  JUL &  Index(['TLAX'], dtype='object', name='EDO') &   136.800000 &   Index(['MEX'], dtype='object', name='EDO') &   176.478333 \\\\\n",
+      "7 &  AGO &   Index(['SIN'], dtype='object', name='EDO') &   266.619231 &   Index(['COL'], dtype='object', name='EDO') &   237.771579 \\\\\n",
+      "8 &  SEP &  Index(['CHIS'], dtype='object', name='EDO') &   274.009310 &  Index(['CHIS'], dtype='object', name='EDO') &   279.963521 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(xm_max.to_latex())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
